[build-system]
requires = ["scikit-build-core", "pybind11", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "nelux"
version = "0.8.0"
readme = "README.md"
authors = [
    {name = "Nilas Tiago", email = "nilascontact@gmail.com"},
]
description = "Lightspeed video decoding directly into tensors!"
requires-python = ">=3.10"
license = {text = "AGPL-3.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
keywords = ["ffmpeg", "video", "ml", "pytorch", "decode", "tensors", "inference"]

[project.urls]
Homepage = "https://github.com/NevermindNilas/CeLux"
Repository = "https://github.com/NevermindNilas/CeLux"
Documentation = "https://github.com/NevermindNilas/CeLux/blob/master/README.md"
Changelog = "https://github.com/NevermindNilas/CeLux/blob/master/docs/CHANGELOG.md"
Issues = "https://github.com/NevermindNilas/CeLux/issues"

[tool.scikit-build]
cmake.args = [
  "-DCMAKE_TOOLCHAIN_FILE=$ENV{VCPKG_TOOLCHAIN_FILE}",
  "-DVCPKG_TARGET_TRIPLET=$ENV{VCPKG_TARGET_TRIPLET}",
  "-DCMAKE_PREFIX_PATH=$ENV{VCPKG_ROOT}/installed/$ENV{VCPKG_TARGET_TRIPLET}",
  "-DCMAKE_MODULE_PATH=$ENV{VCPKG_ROOT}/installed/$ENV{VCPKG_TARGET_TRIPLET}/share/ffmpeg"
]
